@@ -51,6 +51,7 @@ I want to thank the help and the collaboration of the following people:
 -JSJ, helping me with pthreads on Windows version
 -Miodrag Milanovic, for granting permission to include his National Semiconductor SC/MP CPU Emulator https://github.com/mamedev/mame/blob/master/src/devices/cpu/scmp/ . Distributed under BSD-3 license
 -Tim Gilberts, for bug reporting
+-Gary Lancaster, for bug reporting
 
 -Everyone at Speccy, ZX80, ZX81, Z88 and Raspberry Pi forums with all the suggestions to my emulator
 -Everyone who test the beta and stable versions of the emulator and report bugs
