@@ -743,6 +743,16 @@ unsigned int cpu_core_loop_debug_registro(char *registro,int *si_cond_opcode)
         if (!strcasecmp(registro,"pc")) return reg_pc;
         if (!strcasecmp(registro,"ix")) return reg_ix;
         if (!strcasecmp(registro,"iy")) return reg_iy;
+
+        if (!strcasecmp(registro,"fs")) return ( Z80_FLAGS & FLAG_S ? 1 : 0);
+        if (!strcasecmp(registro,"fz")) return ( Z80_FLAGS & FLAG_Z ? 1 : 0);
+        if (!strcasecmp(registro,"fp") || !strcasecmp(registro,"fv"))
+            return ( Z80_FLAGS & FLAG_PV ? 1 : 0);
+        if (!strcasecmp(registro,"fh")) return ( Z80_FLAGS & FLAG_H ? 1 : 0);
+        if (!strcasecmp(registro,"fn")) return ( Z80_FLAGS & FLAG_N ? 1 : 0);
+        if (!strcasecmp(registro,"fc")) return ( Z80_FLAGS & FLAG_C ? 1 : 0);
+
+
 	if (!strcasecmp(registro,"opcode")) {
 		*si_cond_opcode=1;
 		//el valor de retorno aqui da igual. se evalua despues
